# senfOS

./: .gitignore  README.md
os_/: CMakeLists.txt  main.cpp  memmap_custom_4MB.ld  settings.h
os_/Pico_code/c/examples/: CMakeLists.txt  image.h  oled.cpp  oled.h
os_/Pico_code/c/lib/Config/: DEV_Config.h  Debug.h
os_/Pico_code/c/lib/GUI/: GUI_Paint.h
os_/Pico_code/c/lib/Infrared/: Infrared.h
os_/Pico_code/c/lib/LCD/: LCD_1in14.h
os_/Pico_code/c/lib/OLED/: OLED_1in3_c.h
os_/Pico_ePaper_Code/c/examples/: epd_213.cpp  epd_213.h  image.h
os_/libs/: CMakeLists.txt
os_/libs/blink/: CMakeLists.txt  blink.cpp  blink.h
os_/libs/hotspot/: CMakeLists.txt  hotspot.cpp  hotspot.h  lwipopts.h
os_/libs/myhttp/: CMakeLists.txt  lwipopts.h  myhttp.cpp  myhttp.h
os_/libs/mywifi/: CMakeLists.txt  mywifi.cpp  mywifi.h
os_/myhttpserver/: CMakeLists.txt  lwipopts.h  makefsdata  mbedtls_config.h  my_fsdata.c  myhttpserver.cpp  myhttpserver.h  psa_crypto_config.h
os_/myhttpserver/certs/: certs.h  run.sh  server.crt  server.csr  server_key.pem
os_/myhttpserver/fs/: get.shtml  index.html  index.shtml  post.html
